wacc/lib/menhir-20170712/src/_stage2/parser.automaton
State 0:
grammar' -> . grammar [ # ]
-- On TYPE shift to state 1
-- On TOKEN shift to state 33
-- On START shift to state 44
-- On RIGHT shift to state 52
-- On PUBLIC shift to state 53
-- On PERCENTATTRIBUTE shift to state 54
-- On PARAMETER shift to state 73
-- On ON_ERROR_REDUCE shift to state 75
-- On NONASSOC shift to state 77
-- On LEFT shift to state 78
-- On INLINE shift to state 79
-- On HEADER shift to state 80
-- On GRAMMARATTRIBUTE shift to state 81
-- On EOF shift to state 82
-- On COLON shift to state 83
-- On priority_keyword shift to state 84
-- On list(declaration) shift to state 91
-- On grammar shift to state 186
-- On declaration shift to state 187
-- On PERCENTPERCENT reduce production list(declaration) -> 

State 1:
declaration -> TYPE . OCAMLTYPE separated_nonempty_list(option(COMMA),strict_actual) [ TYPE TOKEN START RIGHT PUBLIC PERCENTPERCENT PERCENTATTRIBUTE PARAMETER ON_ERROR_REDUCE NONASSOC LEFT INLINE HEADER GRAMMARATTRIBUTE EOF COLON ]
-- On OCAMLTYPE shift to state 2

State 2:
declaration -> TYPE OCAMLTYPE . separated_nonempty_list(option(COMMA),strict_actual) [ TYPE TOKEN START RIGHT PUBLIC PERCENTPERCENT PERCENTATTRIBUTE PARAMETER ON_ERROR_REDUCE NONASSOC LEFT INLINE HEADER GRAMMARATTRIBUTE EOF COLON ]
-- On UID shift to state 3
-- On LID shift to state 4
-- On symbol shift to state 5
-- On strict_actual shift to state 24
-- On separated_nonempty_list(option(COMMA),strict_actual) shift to state 32

State 3:
symbol -> UID . [ UID TYPE TOKEN START STAR RIGHT QUESTION PUBLIC PLUS PERCENTPERCENT PERCENTATTRIBUTE PARAMETER ON_ERROR_REDUCE NONASSOC LPAREN LID LEFT INLINE HEADER GRAMMARATTRIBUTE EOF COMMA COLON ]
-- On UID reduce production symbol -> UID 
-- On TYPE reduce production symbol -> UID 
-- On TOKEN reduce production symbol -> UID 
-- On START reduce production symbol -> UID 
-- On STAR reduce production symbol -> UID 
-- On RIGHT reduce production symbol -> UID 
-- On QUESTION reduce production symbol -> UID 
-- On PUBLIC reduce production symbol -> UID 
-- On PLUS reduce production symbol -> UID 
-- On PERCENTPERCENT reduce production symbol -> UID 
-- On PERCENTATTRIBUTE reduce production symbol -> UID 
-- On PARAMETER reduce production symbol -> UID 
-- On ON_ERROR_REDUCE reduce production symbol -> UID 
-- On NONASSOC reduce production symbol -> UID 
-- On LPAREN reduce production symbol -> UID 
-- On LID reduce production symbol -> UID 
-- On LEFT reduce production symbol -> UID 
-- On INLINE reduce production symbol -> UID 
-- On HEADER reduce production symbol -> UID 
-- On GRAMMARATTRIBUTE reduce production symbol -> UID 
-- On EOF reduce production symbol -> UID 
-- On COMMA reduce production symbol -> UID 
-- On COLON reduce production symbol -> UID 

State 4:
symbol -> LID . [ UID TYPE TOKEN START STAR RIGHT QUESTION PUBLIC PLUS PERCENTPERCENT PERCENTATTRIBUTE PARAMETER ON_ERROR_REDUCE NONASSOC LPAREN LID LEFT INLINE HEADER GRAMMARATTRIBUTE EOF COMMA COLON ]
-- On UID reduce production symbol -> LID 
-- On TYPE reduce production symbol -> LID 
-- On TOKEN reduce production symbol -> LID 
-- On START reduce production symbol -> LID 
-- On STAR reduce production symbol -> LID 
-- On RIGHT reduce production symbol -> LID 
-- On QUESTION reduce production symbol -> LID 
-- On PUBLIC reduce production symbol -> LID 
-- On PLUS reduce production symbol -> LID 
-- On PERCENTPERCENT reduce production symbol -> LID 
-- On PERCENTATTRIBUTE reduce production symbol -> LID 
-- On PARAMETER reduce production symbol -> LID 
-- On ON_ERROR_REDUCE reduce production symbol -> LID 
-- On NONASSOC reduce production symbol -> LID 
-- On LPAREN reduce production symbol -> LID 
-- On LID reduce production symbol -> LID 
-- On LEFT reduce production symbol -> LID 
-- On INLINE reduce production symbol -> LID 
-- On HEADER reduce production symbol -> LID 
-- On GRAMMARATTRIBUTE reduce production symbol -> LID 
-- On EOF reduce production symbol -> LID 
-- On COMMA reduce production symbol -> LID 
-- On COLON reduce production symbol -> LID 

State 5:
strict_actual -> symbol . loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) [ UID TYPE TOKEN START STAR RIGHT QUESTION PUBLIC PLUS PERCENTPERCENT PERCENTATTRIBUTE PARAMETER ON_ERROR_REDUCE NONASSOC LID LEFT INLINE HEADER GRAMMARATTRIBUTE EOF COMMA COLON ]
-- On LPAREN shift to state 6
-- On loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) shift to state 23
-- On UID reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On TYPE reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On TOKEN reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On START reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On STAR reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On RIGHT reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On QUESTION reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On PUBLIC reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On PLUS reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On PERCENTPERCENT reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On PERCENTATTRIBUTE reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On PARAMETER reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On ON_ERROR_REDUCE reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On NONASSOC reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On LID reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On LEFT reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On INLINE reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On HEADER reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On GRAMMARATTRIBUTE reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On EOF reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On COMMA reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On COLON reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 

State 6:
loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN . separated_nonempty_list(COMMA,strict_actual) RPAREN [ UID TYPE TOKEN START STAR RIGHT QUESTION PUBLIC PLUS PERCENTPERCENT PERCENTATTRIBUTE PARAMETER ON_ERROR_REDUCE NONASSOC LID LEFT INLINE HEADER GRAMMARATTRIBUTE EOF COMMA COLON ]
-- On UID shift to state 7
-- On LID shift to state 8
-- On symbol shift to state 9
-- On strict_actual shift to state 11
-- On separated_nonempty_list(COMMA,strict_actual) shift to state 21

State 7:
symbol -> UID . [ STAR RPAREN QUESTION PLUS LPAREN COMMA ]
-- On STAR reduce production symbol -> UID 
-- On RPAREN reduce production symbol -> UID 
-- On QUESTION reduce production symbol -> UID 
-- On PLUS reduce production symbol -> UID 
-- On LPAREN reduce production symbol -> UID 
-- On COMMA reduce production symbol -> UID 

State 8:
symbol -> LID . [ STAR RPAREN QUESTION PLUS LPAREN COMMA ]
-- On STAR reduce production symbol -> LID 
-- On RPAREN reduce production symbol -> LID 
-- On QUESTION reduce production symbol -> LID 
-- On PLUS reduce production symbol -> LID 
-- On LPAREN reduce production symbol -> LID 
-- On COMMA reduce production symbol -> LID 

State 9:
strict_actual -> symbol . loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) [ STAR RPAREN QUESTION PLUS COMMA ]
-- On LPAREN shift to state 10
-- On loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) shift to state 20
-- On STAR reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On RPAREN reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On QUESTION reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On PLUS reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 
-- On COMMA reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> 

State 10:
loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN . separated_nonempty_list(COMMA,strict_actual) RPAREN [ STAR RPAREN QUESTION PLUS COMMA ]
-- On UID shift to state 7
-- On LID shift to state 8
-- On symbol shift to state 9
-- On strict_actual shift to state 11
-- On separated_nonempty_list(COMMA,strict_actual) shift to state 18

State 11:
separated_nonempty_list(COMMA,strict_actual) -> strict_actual . [ RPAREN ]
separated_nonempty_list(COMMA,strict_actual) -> strict_actual . COMMA separated_nonempty_list(COMMA,strict_actual) [ RPAREN ]
strict_actual -> strict_actual . modifier [ STAR RPAREN QUESTION PLUS COMMA ]
-- On STAR shift to state 12
-- On QUESTION shift to state 13
-- On PLUS shift to state 14
-- On COMMA shift to state 15
-- On modifier shift to state 17
-- On RPAREN reduce production separated_nonempty_list(COMMA,strict_actual) -> strict_actual 

State 12:
modifier -> STAR . [ STAR RPAREN QUESTION PLUS COMMA ]
-- On STAR reduce production modifier -> STAR 
-- On RPAREN reduce production modifier -> STAR 
-- On QUESTION reduce production modifier -> STAR 
-- On PLUS reduce production modifier -> STAR 
-- On COMMA reduce production modifier -> STAR 

State 13:
modifier -> QUESTION . [ STAR RPAREN QUESTION PLUS COMMA ]
-- On STAR reduce production modifier -> QUESTION 
-- On RPAREN reduce production modifier -> QUESTION 
-- On QUESTION reduce production modifier -> QUESTION 
-- On PLUS reduce production modifier -> QUESTION 
-- On COMMA reduce production modifier -> QUESTION 

State 14:
modifier -> PLUS . [ STAR RPAREN QUESTION PLUS COMMA ]
-- On STAR reduce production modifier -> PLUS 
-- On RPAREN reduce production modifier -> PLUS 
-- On QUESTION reduce production modifier -> PLUS 
-- On PLUS reduce production modifier -> PLUS 
-- On COMMA reduce production modifier -> PLUS 

State 15:
separated_nonempty_list(COMMA,strict_actual) -> strict_actual COMMA . separated_nonempty_list(COMMA,strict_actual) [ RPAREN ]
-- On UID shift to state 7
-- On LID shift to state 8
-- On symbol shift to state 9
-- On strict_actual shift to state 11
-- On separated_nonempty_list(COMMA,strict_actual) shift to state 16

State 16:
separated_nonempty_list(COMMA,strict_actual) -> strict_actual COMMA separated_nonempty_list(COMMA,strict_actual) . [ RPAREN ]
-- On RPAREN reduce production separated_nonempty_list(COMMA,strict_actual) -> strict_actual COMMA separated_nonempty_list(COMMA,strict_actual) 

State 17:
strict_actual -> strict_actual modifier . [ STAR RPAREN QUESTION PLUS COMMA ]
-- On STAR reduce production strict_actual -> strict_actual modifier 
-- On RPAREN reduce production strict_actual -> strict_actual modifier 
-- On QUESTION reduce production strict_actual -> strict_actual modifier 
-- On PLUS reduce production strict_actual -> strict_actual modifier 
-- On COMMA reduce production strict_actual -> strict_actual modifier 

State 18:
loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) . RPAREN [ STAR RPAREN QUESTION PLUS COMMA ]
-- On RPAREN shift to state 19

State 19:
loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN . [ STAR RPAREN QUESTION PLUS COMMA ]
-- On STAR reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On RPAREN reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On QUESTION reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On PLUS reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On COMMA reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 

State 20:
strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) . [ STAR RPAREN QUESTION PLUS COMMA ]
-- On STAR reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On RPAREN reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On QUESTION reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On PLUS reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On COMMA reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 

State 21:
loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) . RPAREN [ UID TYPE TOKEN START STAR RIGHT QUESTION PUBLIC PLUS PERCENTPERCENT PERCENTATTRIBUTE PARAMETER ON_ERROR_REDUCE NONASSOC LID LEFT INLINE HEADER GRAMMARATTRIBUTE EOF COMMA COLON ]
-- On RPAREN shift to state 22

State 22:
loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN . [ UID TYPE TOKEN START STAR RIGHT QUESTION PUBLIC PLUS PERCENTPERCENT PERCENTATTRIBUTE PARAMETER ON_ERROR_REDUCE NONASSOC LID LEFT INLINE HEADER GRAMMARATTRIBUTE EOF COMMA COLON ]
-- On UID reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On TYPE reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On TOKEN reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On START reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On STAR reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On RIGHT reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On QUESTION reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On PUBLIC reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On PLUS reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On PERCENTPERCENT reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On PERCENTATTRIBUTE reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On PARAMETER reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On ON_ERROR_REDUCE reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On NONASSOC reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On LID reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On LEFT reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On INLINE reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On HEADER reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On GRAMMARATTRIBUTE reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On EOF reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On COMMA reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 
-- On COLON reduce production loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) -> LPAREN separated_nonempty_list(COMMA,strict_actual) RPAREN 

State 23:
strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) . [ UID TYPE TOKEN START STAR RIGHT QUESTION PUBLIC PLUS PERCENTPERCENT PERCENTATTRIBUTE PARAMETER ON_ERROR_REDUCE NONASSOC LID LEFT INLINE HEADER GRAMMARATTRIBUTE EOF COMMA COLON ]
-- On UID reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On TYPE reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On TOKEN reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On START reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On STAR reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On RIGHT reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On QUESTION reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On PUBLIC reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On PLUS reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On PERCENTPERCENT reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On PERCENTATTRIBUTE reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On PARAMETER reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On ON_ERROR_REDUCE reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On NONASSOC reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On LID reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On LEFT reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On INLINE reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On HEADER reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On GRAMMARATTRIBUTE reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On EOF reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On COMMA reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 
-- On COLON reduce production strict_actual -> symbol loption(delimited(LPAREN,separated_nonempty_list(COMMA,strict_actual),RPAREN)) 

State 24:
separated_nonempty_list(option(COMMA),strict_actual) -> strict_actual . [ TYPE TOKEN START RIGHT PUBLIC PERCENTPERCENT PERCENTATTRIBUTE PARAMETER ON_ERROR_REDUCE NONASSOC LEFT INLINE HEADER GRAMMARATTRIBUTE EOF COLON ]
separated_nonempty_list(option(COMMA),strict_actual) -> strict_actual . option(COMMA) separated_nonempty_list(option(COMMA),strict_actual) [ TYPE TOKEN START RIGHT PUBLIC PERCENTPERCENT PERCENTATTRIBUTE PARAMETER ON_ERROR_REDUCE NONASSOC LEFT INLINE HEADER GRAMMARATTRIBUTE EOF COLON ]
strict_actual -> strict_actual . modifier [ UID TYPE TOKEN START STAR RIGHT QUESTION PUBLIC PLUS PERCENTPERCENT PERCENTATTRIBUTE PARAMETER ON_ERROR_REDUCE NONASSOC LID LEFT INLINE HEADER GRAMMARATTRIBUTE EOF COMMA COLON ]
-- On STAR shift to state 25
-- On QUESTION shift to state 26
-- On PLUS shift to state 27
-- On COMMA shift to state 28
-- On option(COMMA) shift to state 29
-- On modifier shift to state 31
-- On UID reduce production option(COMMA) -> 
-- On TYPE reduce production separated_nonempty_list(option(COMMA),strict_actual) -> strict_actual 
-- On TOKEN reduce production separated_nonempty_list(option(COMMA),strict_actual) -> strict_actual 
-- On START reduce production separated_nonempty_list(option(COMMA),strict_actual) -> strict_actual 
-- On RIGHT reduce production separated_nonempty_list(option(COMMA),strict_actual) -> strict_actual 
-- On PUBLIC reduce production separated_nonempty_list(option(COMMA),strict_actual) -> strict_actual 
-- On PERCENTPERCENT reduce production separated_nonempty_list(option(COMMA),strict_actual) -> strict_actual 
-- On PERCENTATTRIBUTE reduce production separated_nonempty_list(option(COMMA),strict_actual) -> strict_actual 
-- On PARAMETER reduce production separated_nonempty_list(option(COMMA),strict_actual) -> strict_actual 
-- On ON_ERROR_REDUCE reduce production separated_nonempty_list(option(COMMA),strict_actual) -> strict_actual 
-- On NONASSOC reduce production separated_nonempty_list(option(COMMA),strict_actual) -> strict_actual 
-- On LID reduce production option(COMMA) -> 
-- On LEFT reduce production separated_nonempty_list(option(COMMA),strict_actual) -> strict_actual 
-- On INLINE reduce production separated_nonempty_list(option(COMMA),strict_actual) -> strict_actual 
-- On HEADER reduce production separated_nonempty_list(option(COMMA),strict_actual) -> strict_actual 
-- On GRAMMARATTRIBUTE reduce production separated_nonempty_list(option(COMMA),strict_actual) -> strict_actual 
-- On EOF reduce production separated_nonempty_list(option(COMMA),strict_actual) -> strict_actual 
-- On COLON reduce production separated_nonempty_list(option(COMMA),strict_actual) -> strict_actual 

State 25:
modifier -> STAR . [ UID TYPE TOKEN START STAR RIGHT QUESTION PUBLIC PLUS PERCENTPERCENT PERCENTATTRIBUTE PARAMETER ON_ERROR_REDUCE NONASSOC LID LEFT INLINE HEADER GRAMMARATTRIBUTE EOF COMMA COLON ]
-- On UID reduce production modifier -> STAR 
-- On TYPE reduce production modifier -> STAR 
-- On TOKEN reduce production modifier -> STAR 
-- On START reduce production modifier -> STAR 
-- On STAR reduce production modifier -> STAR 
-- On RIGHT reduce production modifier -> STAR 
-- On QUESTION reduce production modifier -> STAR 
-- On PUBLIC reduce production modifier -> STAR 
-- On PLUS reduce production modifier -> STAR 
-- On PERCENTPERCENT reduce production modifier -> STAR 
-- On PERCENTATTRIBUTE reduce production modifier -> STAR 
-- On PARAMETER reduce production modifier -> STAR 
-- On ON_ERROR_REDUCE reduce production modifier -> STAR 
-- On NONASSOC reduce production modifier -> STAR 
-- On LID reduce production modifier -> STAR 
-- On LEFT reduce production modifier -> STAR 
-- On INLINE reduce production modifier -> STAR 
-- On HEADER reduce production modifier -> STAR 
-- On GRAMMARATTRIBUTE reduce production modifier -> STAR 
-- On EOF reduce production modifier -> STAR 
-- On COMMA reduce production modifier -> STAR 
-- On COLON reduce production modifier -> STAR 

State 26:
modifier -> QUESTION . [ UID TYPE TOKEN START STAR RIGHT QUESTION PUBLIC PLUS PERCENTPERCENT PERCENTATTRIBUTE PARAMETER ON_ERROR_REDUCE NONASSOC LID LEFT INLINE HEADER GRAMMARATTRIBUTE EOF COMMA COLON ]
-- On UID reduce production modifier -> QUESTION 
-- On TYPE reduce production modifier -> QUESTION 
-- On TOKEN reduce production modifier -> QUESTION 
-- On START reduce production modifier -> QUESTION 
-- On STAR reduce production modifier -> QUESTION 
-- On RIGHT reduce production modifier -> QUESTION 
-- On QUESTION reduce production modifier -> QUESTION 
-- On PUBLIC reduce production modifier -> QUESTION 
-- On PLUS reduce production modifier -> QUESTION 
-- On PERCENTPERCENT reduce production modifier -> QUESTION 
-- On PERCENTATTRIBUTE reduce production modifier -> QUESTION 
-- On PARAMETER reduce production modifier -> QUESTION 
-- On ON_ERROR_REDUCE reduce production modifier -> QUESTION 
-- On NONASSOC reduce production modifier -> QUESTION 
-- On LID reduce production modifier -> QUESTION 
-- On LEFT reduce production modifier -> QUESTION 
-- On INLINE reduce production modifier -> QUESTION 
-- On HEADER reduce production modifier -> QUESTION 
-- On GRAMMARATTRIBUTE reduce production modifier -> QUESTION 
-- On EOF reduce production modifier -> QUESTION 
-- On COMMA reduce production modifier -> QUESTION 
-- On COLON reduce production modifier -> QUESTION 

State 27:
modifier -> PLUS . [ UID TYPE TOKEN START STAR RIGHT QUESTION PUBLIC PLUS PERCENTPERCENT PERCENTATTRIBUTE PARAMETER ON_ERROR_REDUCE NONASSOC LID LEFT INLINE HEADER GRAMMARATTRIBUTE EOF COMMA COLON ]
-- On UID reduce production modifier -> PLUS 
-- On TYPE reduce production modifier -> PLUS 
-- On TOKEN reduce production modifier -> PLUS 
-- On START reduce production modifier -> PLUS 
-- On STAR reduce production modifier -> PLUS 
-- On RIGHT reduce production modifier -> PLUS 
-- On QUESTION reduce production modifier -> PLUS 
-- On PUBLIC reduce production modifier -> PLUS 
-- On PLUS reduce production modifier -> PLUS 
-- On PERCENTPERCENT reduce production modifier -> PLUS 
-- On PERCENTATTRIBUTE reduce production modifier -> PLUS 
-- On PARAMETER reduce production modifier -> PLUS 
-- On ON_ERROR_REDUCE reduce production modifier -> PLUS 
-- On NONASSOC reduce production modifier -> PLUS 
-- On LID reduce production modifier -> PLUS 
-- On LEFT reduce production modifier -> PLUS 
-- On INLINE reduce production modifier -> PLUS 
-- On HEADER reduce production modifier -> PLUS 
-- On GRAMMARATTRIBUTE reduce production modifier -> PLUS 
-- On EOF reduce production modifier -> PLUS 
-- On COMMA reduce production modifier -> PLUS 
-- On COLON reduce production modifier -> PLUS 

State 28:
option(COMMA) -> COMMA . [ UID LID ]
-- On UID reduce production option(COMMA) -> COMMA 
-- On LID reduce production option(COMMA) -> COMMA 
